# imageRecommendationCppWebAssemblyForRenderResNetModel

./: .dockerignore  .gitignore  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Image_Selector_by_CLick_with_merged_image_similarity.cpp  README.md  build.bat  build.sh  download-model.js  feature_extractor.cpp  package.json  render.yaml  server.js
public/: index.html
static/: README.txt
